# Zynk

./: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  commands.txt  config.h  config.h.in  config.status  configure  configure.in  configure.scan  intltool-merge  libtool  svn-commit.tmp  zynk.desktop.in  zynk.schemas.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
examples/: AAA.zynk  Makefile  Makefile.am  Makefile.in  default.zynk  hanez.org.zynk
pixmaps/: Makefile  Makefile.am  Makefile.in
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  de.po  zynk.pot
src/: Makefile  Makefile.am  Makefile.in  default.zynk  panel.c  preferences_signals.c  profiles_signals.c  rsync.c  rsync.h  settings.c  settings.h  zynk.c  zynk.glade  zynk.glade.bak  zynk_signals.c  zynk_signals.h
src/.deps/: panel.Po  preferences.Po  preferences_signals.Po  profiles.Po  profiles_signals.Po  rsync.Po  settings.Po  zynk.Po  zynk_signals.Po
src/xpm/: Makefile  Makefile.am  Makefile.in  zynk-pixbufs.h
